unpackaged/main/default/objects/adroll__AdRollTrackingData__c/adroll__AdRollTrackingData__c.object-meta.xml
<CustomObject>
    <description>Object stores the Tracking Data sent by AdRoll. The data is aggregated per day per email address</description>
    <label>RollWorks Tracking Data</label>
    <nameField>
        <displayFormat>ARTD-{000000000}</displayFormat>
        <label>RollWorks Tracking Data Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RollWorks Tracking Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>