unpackaged/main/default/objects/adroll__AdRollTrackingData__c/fields/adroll__ClickConversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__ClickConversion__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Conversion Rate For Clicks (Do Not Use)</description>
    <inlineHelpText>Conversion Rate For Clicks</inlineHelpText>
    <label>Click Conversion (Do Not Use)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>