unpackaged/main/default/objects/adroll__AdRollTrackingData__c/fields/adroll__Clicks__c.field-meta.xml
<CustomField>
    <fullName>adroll__Clicks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Number of Clicks for the Email Address</description>
    <inlineHelpText>Number of Clicks for the Email Address</inlineHelpText>
    <label>Clicks</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>