unpackaged/main/default/objects/adroll__AdRollTrackingData__c/fields/adroll__Email__c.field-meta.xml
<CustomField>
    <fullName>adroll__Email__c</fullName>
    <description>Email Address for the Tracking Data</description>
    <externalId>true</externalId>
    <inlineHelpText>Email Address for the Tracking Data</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>