unpackaged/main/default/objects/adroll__AdRollTrackingData__c/fields/adroll__IsAggregated__c.field-meta.xml
<CustomField>
    <fullName>adroll__IsAggregated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsAggregated</label>
    <type>Checkbox</type>
</CustomField>