unpackaged/main/default/objects/adroll__AdRollTrackingData__c/fields/adroll__ViewConversion__c.field-meta.xml
<CustomField>
    <fullName>adroll__ViewConversion__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Conversion Rate for Views (Do Not Use)</description>
    <inlineHelpText>Conversion Rate for Views</inlineHelpText>
    <label>View Conversion (Do Not Use)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>